--- a/styles/mindfulprogress.css
+++ b/styles/mindfulprogress.css
@@ -15,12 +15,10 @@ header {
 .centered {
     margin:auto;
     text-align:center;
-
 }
 
 .processes {
 /*    background-color:#D5C499;*/
-
     background-color:#C0C0C0;
     margin-left:20%;
     margin-right:20%;
@@ -34,8 +32,11 @@ header {
     border-radius: 5px;
 }
 
-a:link {
-    color:#444038;
+.processes:hover
+{
+  -webkit-transform: scale(1.04);
+        -ms-transform: scale(1.04);
+        transform: scale(1.04);
 }
 
 .survey-component {
