--- a/styles/mindfulprogress.css
+++ b/styles/mindfulprogress.css
@@ -6,95 +6,153 @@
  #DEE7BB */
 
 header {
-    font-size:1.4em;
-    margin-top:5%;
-    margin-bottom:5%;
-    /*background-color:#979C87;*/
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .centered {
-    margin:auto;
-    text-align:center;
+  margin: auto;
+  text-align: center;
 }
 
-.processes {
-/*    background-color:#D5C499;*/
-    background-color:#C0C0C0;
-    margin-left:20%;
-    margin-right:20%;
-    margin-top:4%;
-    margin-bottom:4%;
-    padding:10%;
-    color:#444038;
-    font-size:1.4em;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+.button-link {
+  align-self: center;
+  text-align: center;
+  display: block;
+  width: 50%;
+  margin: auto;
+  margin-top: 5px;
+  padding: 20px;
+  font-size: 1.5rem;
+  background-color: #C0C0C0;
+  text-decoration: none;
+
+  /*background: #4479BA;*/
+  color: #FFF;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border: solid 1px #20538D;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-.processes:hover
-{
-  -webkit-transform: scale(1.04);
-        -ms-transform: scale(1.04);
-        transform: scale(1.04);
+.button-link:hover {
+  /*background: #356094;
+  border: solid 1px #2A4E77;*/
+  background: #222222;
+  border: solid 1px #2A4E77;
+
+  -webkit-transform: scale(1.02);
+  -ms-transform: scale(1.02);
+  transform: scale(1.02);
+}
+
+.button-link:active {
+  -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  /*background: #2E5481;
+  border: solid 1px #203E5F;
+  */
+background: #222222;
+  border: solid 1px #203E5F;
+
+-webkit-transform: scale(1.05);
+-ms-transform: scale(1.05);
+transform: scale(1.05);
+}
+
+@media (min-width: 400px) {
+.button-link {
+  font-size: 2.0rem;
+}
+}
+
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 550px) {
+  .button-link {
+    font-size: 2.3rem;
+  }
+}
+
+/* Larger than tablet */
+@media (min-width: 750px) {
+  .button-link {
+    font-size: 2.6rem;
+  }
+}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {
+  .button-link {
+    font-size: 2.8rem;
+  }
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {
+  .button-link {
+    font-size: 3.0rem;
+  }
 }
 
 .survey-component {
-    margin-left:7%;
-    margin-top:2%;
-    margin-bottom:2%;
+  margin-left: 7%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 nav a {
-    margin-right:1%;
-    padding-bottom:4%;
-    padding-top:2%;
+  margin-right: 1%;
+  padding-bottom: 4%;
+  padding-top: 2%;
 }
 
-@media (min-width: 550px) {
-    .processes {
-        margin-left:30%;
-        margin-right:30%;
-        font-size:1.6em;
-    }
-
+h1, h2, h3, h4, h5 {
+  font-family: "Oxygen", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-weight: 700;*/
+  font-style: normal;
 }
 
-h1,h2, h3, h4, h5 {
-    font-family: "Oxygen", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-h1,h2{
-    text-transform: uppercase;
+h1, h2 {
+  text-transform: uppercase;
 }
 
 .big-margin {
-    margin-top:3em;
+  margin-top: 3em;
 }
 
 caption {
-    margin-left:0px;
-    width:365px;
+  margin-left: 0px;
+  width: 365px;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .youtube-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
 }
 
 .youtube-container iframe {
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
